--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.5.0'
 
+    implementation 'com.android.support:support-v4:28.0.0'
+
+
 }
