--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
+def proj = rootProject.ext
 
 android {
     compileSdkVersion 28
@@ -10,17 +14,20 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        kapt {
+            generateStubs = true
+        }
     }
-
     dataBinding {
         enabled = true
     }
-
+    androidExtensions {
+        experimental = true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -47,9 +54,10 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 
-    // RX and dagger
-    implementation 'com.google.dagger:dagger:2.15'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.14'
+    implementation "com.google.dagger:dagger-android:${proj.dagger}"
+    implementation "com.google.dagger:dagger-android-support:${proj.dagger}"
+    kapt "com.google.dagger:dagger-android-processor:${proj.dagger}"
+    kapt "com.google.dagger:dagger-compiler:${proj.dagger}"
 
     implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
