--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-def proj = rootProject.ext
+def project = rootProject.ext
 
 android {
     compileSdkVersion 28
@@ -52,16 +52,18 @@ dependencies {
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 
-    implementation "com.google.dagger:dagger-android:${proj.dagger}"
-    implementation "com.google.dagger:dagger-android-support:${proj.dagger}"
-    kapt "com.google.dagger:dagger-android-processor:${proj.dagger}"
-    kapt "com.google.dagger:dagger-compiler:${proj.dagger}"
+    implementation "com.google.dagger:dagger-android:${project.dagger}"
+    implementation "com.google.dagger:dagger-android-support:${project.dagger}"
+    kapt "com.google.dagger:dagger-android-processor:${project.dagger}"
+    kapt "com.google.dagger:dagger-compiler:${project.dagger}"
 
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
 }
 
 repositories {
